Update Hazelcast presentation

--- a/talks/hazelcast/index.html
+++ b/talks/hazelcast/index.html
@@ -517,6 +517,9 @@
         <section>
             <h3>Hazelcast Cloud</h3>
             <h4>Hazelcast IMDG cluster as a service</h4>
+
+            <img src="img/hzcloud.png" width="60%"/><br>
+
             <br>
             <h4><a href="https://cloud.hazelcast.com">https://cloud.hazelcast.com</a></h4>
         </section>
@@ -549,6 +552,14 @@
 
             <h3>Hot Restart Store</h3>
             <img class="fragment" src="img/optanedc.png" width="40%"/><br>
+        </section>
+
+        <section>
+
+        </section>
+        <section>
+            <img src="img/hazelcast-platform.png" width="80%"/><br>
+            <small>source: Hazelcast</small>
         </section>
 
         <section>
