--- a/talks/hazelcast/index.html
+++ b/talks/hazelcast/index.html
@@ -59,6 +59,10 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
 
+        <section data-background-image="img/13-00grzegorz.png">
+
+        </section>
+
         <section>
             <h1>Hazelcast 5.0</h1>
             <h3>The Hitchhiker's Guide</h3>
@@ -613,6 +617,8 @@
         </section>
 
         <section>
+            <h1>QA</h1>
+            <br>
             <h2>Thank You!</h2>
             <h4><a href="https://pivovarit.github.io/talks/hazelcast">https://pivovarit.github.io/talks/hazelcast</a>
             </h4>
