--- a/talks/index.html
+++ b/talks/index.html
@@ -44,8 +44,12 @@
 
 
     <tr>
+        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
+    </tr>
+
+    <tr>
         <td>95.</td>
-        <td>BydgoszczJUG</td>
+        <td data-location="53.14310869846268, 18.130762337675296" data-place="University of Sciences and Technology in Bydgoszcz">BydgoszczJUG</td>
         <td><a href="">Wprowadzenie do ekosystemu Hazelcast 5.0</a></td>
         <td>23.09.2021</td>
         <td>Bydgoszcz</td>
@@ -58,12 +62,6 @@
         <td>23.09.2021</td>
         <td>Online</td>
     </tr>
-
-    <tr>
-        <td style="background: #ffffff" colspan="5" align="center">PAST</td>
-    </tr>
-
-        
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2021</td>
     </tr>
