--- a/talks/index.html
+++ b/talks/index.html
@@ -50,11 +50,20 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2021</td>
     </tr>
+        
+   
+    <tr>
+        <td>96.</td>
+        <td>Luxoft TechGround</td>
+        <td><a href="https://www.techground.pro">Wprowadzenie do ekosystemu Hazelcast 5.0</a></td>
+        <td>30.10.2021</td>
+        <td>Online</td>
+    </tr>
 
     <tr>
         <td>95.</td>
         <td data-location="53.14310869846268, 18.130762337675296" data-place="University of Sciences and Technology in Bydgoszcz">BydgoszczJUG</td>
-        <td><a href="">Wprowadzenie do ekosystemu Hazelcast 5.0</a></td>
+        <td><a href="">Hazelcast: The Hitchhiker's Guide</a></td>
         <td>23.09.2021</td>
         <td>Bydgoszcz</td>
     </tr>
