--- a/talks/index.html
+++ b/talks/index.html
@@ -50,12 +50,19 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2021</td>
     </tr>
-        
-   
+
+    <tr>
+        <td>97.</td>
+        <td>SilesiaJUG</td>
+        <td><a href="https://www.meetup.com/Silesia-JUG/events/281960824/">Wprowadzenie do ekosystemu Hazelcast 5.0</a></td>
+        <td>18.11.2021</td>
+        <td>Online</td>
+    </tr>
+
     <tr>
         <td>96.</td>
         <td>Luxoft TechGround</td>
-        <td><a href="https://www.techground.pro">Wprowadzenie do ekosystemu Hazelcast 5.0</a></td>
+        <td><a href="https://www.techground.pro">Hazelcast 5.0: The Hitchhiker's Guide</a></td>
         <td>30.10.2021</td>
         <td>Online</td>
     </tr>
