Add CompletableFuture: Red Flags

--- a/talks/completable-future-red-flags/index.html
+++ b/talks/completable-future-red-flags/index.html
@@ -82,13 +82,25 @@
         </section>
 
         <section>
-<!--            applyToEither-->
-<!--            cancel-->
-<!--            anyOf-->
-<!--            allOf-->
-<!--            async/sync-->
-<!--            fjp vs loom-->
-<!--            thread-per-task-executor-->
+            <pre><code data-trim>
+                A();
+                B();
+            </code></pre>
+        </section>
+
+        <section>
+            <img width="60%" src="img/async.png"/>
+        </section>
+
+        <section>
+            <!--            intro-->
+            <!--            applyToEither-->
+            <!--            cancel-->
+            <!--            anyOf-->
+            <!--            allOf-->
+            <!--            async/sync-->
+            <!--            fjp vs loom-->
+            <!--            thread-per-task-executor-->
         </section>
         <section>
             <h2>Thank You!</h2>
