--- a/talks/completable-future-red-flags/index.html
+++ b/talks/completable-future-red-flags/index.html
@@ -81,13 +81,13 @@
 
         </section>
 
-        <section>
+        <!--<section>
             <pre><code data-trim>
                 A();
                 B();
             </code></pre>
         </section>
-
+-->
         <section>
             <img width="60%" src="img/async.png"/>
         </section>
