Add CompletableFuture: Red Flags

--- a/talks/completable-future-red-flags/index.html
+++ b/talks/completable-future-red-flags/index.html
@@ -81,6 +81,8 @@
 
         </section>
 
+        <section></section>
+
         <!--<section>
             <pre><code data-trim>
                 A();
@@ -90,6 +92,12 @@
 -->
         <section>
             <img width="60%" src="img/async.png"/>
+        </section>
+
+        <section>
+            <h2>Async</h2>
+
+            <img width="40%" src="img/simba.gif"/>
         </section>
 
         <section>
