Add CompletableFuture: Red Flags

--- a/talks/completable-future-red-flags/index.html
+++ b/talks/completable-future-red-flags/index.html
@@ -101,6 +101,39 @@
         </section>
 
         <section>
+            <h2>Future</h2>
+            <h3>Asynchronous operation result's spawn point</h3>
+            <br>
+
+            <pre class="fragment"><code data-trim>
+                Future&lt;Integer> result = someAsyncMethod();
+                Integer integer = result.get();
+            </code></pre>
+
+        </section>
+
+        <section>
+            <h2>Future</h2>
+            <h3>Asynchronous operation result's spawn point</h3>
+            <br>
+
+            <pre><code data-trim>
+                Future&lt;Integer> result = someAsyncMethod();
+                // ...
+                Integer integer = result.get();
+            </code></pre>
+
+        </section>
+
+        <section>
+            <h2>Future vs CompletableFuture</h2>
+        </section>
+
+        <section>
+
+        </section>
+
+        <section>
             <!--            intro-->
             <!--            applyToEither-->
             <!--            cancel-->
