Add CompletableFuture: Red Flags

--- a/talks/completable-future-red-flags/index.html
+++ b/talks/completable-future-red-flags/index.html
@@ -139,13 +139,29 @@
         <section>
             <h2>Java Future Implementations:</h2>
             <ul>
-                <li>java.util.concurrent.Future</li>
-                <li>java.util.concurrent.CompletableFuture</li>
+                <li>java.util.concurrent.Future (JDK 1.5)</li>
+                <li>java.util.concurrent.CompletableFuture (JDK 1.8)</li>
             </ul>
         </section>
 
         <section>
-            <h2>Future vs CompletableFuture</h2>
+            <h2>Future's Limitations</h2>
+            <ul>
+                <li>Blocking API</li>
+                <li>Limited exception handling</li>
+                <li>A Future can't be manually completed</li>
+                <li>Multiple Futures can't be combined</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Future's Limitations</h2>
+            <ul>
+                <li>Blocking API</li>
+                <li>Limited exception handling</li>
+                <li>A Future can't be manually completed</li>
+                <li>Multiple Futures can't be combined</li>
+            </ul>
         </section>
 
         <section>
@@ -154,6 +170,7 @@
 
         <section>
             <!--            intro-->
+            <!--            public API support -->
             <!--            applyToEither-->
             <!--            cancel-->
             <!--            anyOf-->
