Add CompletableFuture: Red Flags

--- a/talks/completable-future-red-flags/index.html
+++ b/talks/completable-future-red-flags/index.html
@@ -191,8 +191,7 @@
         </section>
 
         <section>
-
-
+            <h2>...but this talk is not about the easy parts</h2>
         </section>
 
         <section>
