Add CompletableFuture: Red Flags

--- a/talks/completable-future-red-flags/index.html
+++ b/talks/completable-future-red-flags/index.html
@@ -283,8 +283,12 @@
         </section>
 
         <section>
+            <h3>Can you spot the issue?</h3>
+
             <img width="80%" src="img/testcontainers.png"/>
         </section>
+
+
 
         <section>
             <pre><code data-trim>
