Add CompletableFuture: Red Flags

--- a/talks/completable-future-red-flags/index.html
+++ b/talks/completable-future-red-flags/index.html
@@ -203,7 +203,8 @@
         </section>
 
         <section>
-            <h2>...but this talk is not about the easy parts</h2>
+            <img width="60%" src="img/nurkiewicz.png"/>
+            <h4><a href="https://youtu.be/-MBPQ7NIL_Y">https://youtu.be/-MBPQ7NIL_Y</a></h4>
         </section>
 
         <section></section>
@@ -287,8 +288,6 @@
 
             <img width="80%" src="img/testcontainers.png"/>
         </section>
-
-
 
         <section>
             <pre><code data-trim>
