Add CompletableFuture: Red Flags

--- a/talks/completable-future-red-flags/index.html
+++ b/talks/completable-future-red-flags/index.html
@@ -290,6 +290,10 @@
         </section>
 
         <section>
+            <img width="70%" src="img/allOf.png"/>
+        </section>
+
+        <section>
             <pre><code data-trim>
                 public static CompletableFuture&lt;Object> anyOf(
                   CompletableFuture&lt;?>... cfs) {
@@ -301,6 +305,22 @@
                 <li class="fragment">Returns CompletableFuture&lt;Object></li>
                 <li class="fragment">Doesn't wait for the first successful completion</li>
             </ul>
+        </section>
+
+        <section>
+            <img width="70%" src="img/anyOf.png"/>
+        </section>
+
+        <section>
+            <h3>thenApply() vs threads</h3>
+        </section>
+
+        <section>
+            <h3>ForkJoinPool</h3>
+        </section>
+
+        <section>
+            <h3>CompletableFuture#applyToEither</h3>
         </section>
 
         <section>
