--- a/talks/index.html
+++ b/talks/index.html
@@ -52,6 +52,14 @@
     </tr>
 
     <tr>
+        <td>98.</td>
+        <td>Doing Java Better by Segfault</td>
+        <td><a href="https://doing-java-better.konfeo.com/pl/groups">Red Flags of CompletableFuture</a></td>
+        <td>14.12.2021</td>
+        <td>Online</td>
+    </tr>
+
+    <tr>
         <td>97.</td>
         <td>SilesiaJUG</td>
         <td><a href="https://www.meetup.com/Silesia-JUG/events/281960824/">Wprowadzenie do ekosystemu Hazelcast 5.0</a></td>
