--- a/talks/index.html
+++ b/talks/index.html
@@ -46,7 +46,35 @@
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">PAST</td>
     </tr>
-        
+
+    <tr>
+        <td>101.</td>
+        <td data-location="49.8162036,24.0232151" data-place="UCU Sheptytsky Center">JavaDay Lviv</td>
+        <td><a href="https://www.javaday.org.ua">Hazelcast 5.0 – The Hitchhiker's Guide</a></td>
+        <td>26.02.2022</td>
+        <td>Lviv/Ukraine</td>
+    </tr>
+
+    <tr>
+        <td>100.</td>
+        <td>JavaDay Lviv</td>
+        <td><a href="https://www.javaday.org.ua">CompletableFuture and its Quirks</a></td>
+        <td>26.02.2022</td>
+        <td>Lviv/Ukraine</td>
+    </tr>
+
+    <tr>
+        <td>99.</td>
+        <td>Talk4Devs 2022</td>
+        <td><a href="https://talk4devs.j-labs.pl/en/74-hazelcast-5-hands-on-2/">Hazelcast 5.0: Hands-on</a></td>
+        <td>16.02.2022</td>
+        <td>Online</td>
+    </tr>
+
+    <tr>
+        <td style="background: #ffffff" colspan="5" align="center">2021</td>
+    </tr>
+
     <tr>
         <td style="background: #ffffff" colspan="5" align="center">2021</td>
     </tr>
