Add Geecon talks

--- a/talks/index.html
+++ b/talks/index.html
@@ -48,19 +48,27 @@
     </tr>
 
     <tr>
+        <td>102.</td>
+        <td data-location="" data-place="">Devoxx for Ukraine</td>
+        <td><a href="https://devoxx.pl/devoxx-for-ukraine/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
+        <td>28.05.2022</td>
+        <td>Cracow/Poland</td>
+    </tr>
+
+    <tr>
         <td>101.</td>
-        <td data-location="49.8162036,24.0232151" data-place="UCU Sheptytsky Center">JavaDay Lviv</td>
-        <td><a href="https://www.javaday.org.ua">Hazelcast 5.0 – The Hitchhiker's Guide</a></td>
-        <td>26.02.2022</td>
-        <td>Lviv/Ukraine</td>
+        <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2022</td>
+        <td><a href="https://2022.geecon.org">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
+        <td>11.05.2022</td>
+        <td>Cracow/Poland</td>
     </tr>
 
     <tr>
         <td>100.</td>
-        <td>JavaDay Lviv</td>
-        <td><a href="https://www.javaday.org.ua">CompletableFuture and its Quirks</a></td>
+        <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2022</td>
+        <td><a href="https://2022.geecon.org">CompletableFuture and its Quirks</a></td>
         <td>26.02.2022</td>
-        <td>Lviv/Ukraine</td>
+        <td>Cracow/Poland</td>
     </tr>
 
     <tr>
