--- a/talks/index.html
+++ b/talks/index.html
@@ -48,7 +48,7 @@
     </tr>
 
     <tr>
-        <td>102.</td>
+        <td>103.</td>
         <td data-location="" data-place="">Devoxx for Ukraine</td>
         <td><a href="https://devoxx.pl/devoxx-for-ukraine/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
         <td>28.05.2022</td>
@@ -56,7 +56,7 @@
     </tr>
 
     <tr>
-        <td>101.</td>
+        <td>102.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2022</td>
         <td><a href="https://2022.geecon.org">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
         <td>11.05.2022</td>
@@ -64,11 +64,20 @@
     </tr>
 
     <tr>
-        <td>100.</td>
+        <td>101.</td>
         <td data-location="50.088853, 19.984622" data-place="Multikino Cracow">Geecon 2022</td>
         <td><a href="https://2022.geecon.org">CompletableFuture and its Quirks</a></td>
-        <td>26.02.2022</td>
+        <td>11.05.2022</td>
         <td>Cracow/Poland</td>
+    </tr>
+
+
+    <tr>
+        <td>100.</td>
+        <td data-location="51.759786, 19.451467" data-place="Stara Drukarnia">JUG Łódź</td>
+        <td><a href="https://www.meetup.com/Java-User-Group-Lodz/events/285059497/">Hazelcast 5.1 – The Hitchhiker's Guide</a></td>
+        <td>21.04.2022</td>
+        <td>Łódź/Poland</td>
     </tr>
 
     <tr>
