--- a/talks/hazelcast/index.html
+++ b/talks/hazelcast/index.html
@@ -59,6 +59,9 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
 
+        <section data-background-image="img/javeloper.png">
+        </section>
+
         <section>
             <h1>Hazelcast 5.1</h1>
             <h3>The Hitchhiker's Guide</h3>
@@ -602,6 +605,7 @@
 
         <section>
             <h2>Thank You!</h2>
+            <h3>Q/A time!</h3>
             <h4><a href="https://pivovarit.github.io/talks/hazelcast">https://pivovarit.github.io/talks/hazelcast</a>
             </h4>
             <img src="img/talk_qr.png"/>
