--- a/talks/completable-future-quirks/index.html
+++ b/talks/completable-future-quirks/index.html
@@ -52,6 +52,8 @@
 
 <div class="reveal">
 
+
+
     <div class="footer">
         <small><a href="http://twitter.com/pivovarit">@pivovarit</a></small>
     </div>
@@ -59,9 +61,11 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
 
+        <section data-background-image="img/geecon.jpg"></section>
+
         <section>
             <h1>CompletableFuture</h1>
-            <h3>Red Flags</h3>
+            <h3>and its quirks</h3>
             <br>
             <br>
             <br>
@@ -79,6 +83,11 @@
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
             <br>
 
+        </section>
+
+        <section>
+            <h2>sli.do</h2>
+            <h3>#geecon2022</h3>
         </section>
 
         <section></section>
@@ -485,7 +494,7 @@
 
         <section>
             <h2>Thank You!</h2>
-            <h4><a href="https://pivovarit.github.io/talks/completable-future-red-flags">https://pivovarit.github.io/talks/completable-future-red-flags</a>
+            <h4><a href="https://pivovarit.github.io/talks/completable-future-quirks">https://pivovarit.github.io/talks/completable-future-quirks</a>
             </h4>
             <img src="img/talk_qr.png"/>
             <h3><a href="http://twitter.com/pivovarit">Twitter: @pivovarit</a></h3>
