--- a/talks/completable-future-quirks/index.html
+++ b/talks/completable-future-quirks/index.html
@@ -496,7 +496,7 @@
             <h2>Thank You!</h2>
             <h4><a href="https://pivovarit.github.io/talks/completable-future-quirks">https://pivovarit.github.io/talks/completable-future-quirks</a>
             </h4>
-            <img src="img/talk_qr.png"/>
+            <img width="15%" src="img/qr.png"/>
             <h3><a href="http://twitter.com/pivovarit">Twitter: @pivovarit</a></h3>
             <br>
             <img src="img/hz.png" width="30%"/><br>
