--- a/talks/hazelcast/index.html
+++ b/talks/hazelcast/index.html
@@ -59,7 +59,7 @@
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
 
-        </section>
+        <section data-background-image="img/geecon.jpg"></section>
 
         <section>
             <h1>Hazelcast 5.1</h1>
